--- a/src/sass/components/_sections.scss
+++ b/src/sass/components/_sections.scss
@@ -34,7 +34,15 @@
   @media screen and (max-width: $breakpoint-normal) {
     .entry-featured,
     .section-heading {
-      max-width: calc(100% - 2em);
+      max-width: calc(100% - 4em);
+    }
+
+    .section-heading {
+      margin-top: 3em;
+      .heading-title {
+        font-size: 1.5em;
+        text-align: center;
+      }
     }
   }
 }
@@ -44,6 +52,10 @@
   width: 100%;
   background-color: var(--color-primary);
   margin-top: 5.375em;
+  @media screen and (max-width: $breakpoint-normal) {
+    height: 10em;
+    margin-top: 5em;
+  }
 }
 
 .section-votes {
@@ -73,7 +85,11 @@
     margin-top: 1.375em;
 
     p {
-      margin: 0 0.875em 0 0;
+      margin: 0 0 0 0.875em;
     }
+  }
+
+  @media screen and (max-width: $breakpoint-normal) {
+    top: -6em;
   }
 }
